[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.21.2", features = ["full"] }
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"]}
config = "0.13"
uuid = { version = "1.2.1", features = ["v4"]}
chrono = { version = "0.4.22", default-features = false }
env_logger = "0.9.1"
log = "0.4"
tracing = { version = "0.1.37", features = ["log"]}
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1"
tracing-actix-web = "0.6.1"
once_cell = "1.15.0"
secrecy = { version = "0.8.0", features = ["serde"]}
serde-aux = "4.0.0"

[dev-dependencies]
once_cell = "1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]   